Fixed dark mode colours

--- a/public/sass/layout/_header.scss
+++ b/public/sass/layout/_header.scss
@@ -44,7 +44,7 @@
       font-size: 7rem;
       width: 22ch;
       line-height: 1.25;
-      color: $text-white;
+      color: $text-light;
       margin-bottom: 5rem;
     }
 
